# minidfs

./: CLAUDE.md  CMakeLists.txt  README.md
client/: main.cpp  mini_dfs_client.cpp  mini_dfs_client.hpp
datanode/: main.cpp  storage.cpp  storage.hpp
metaserver/: cache.cpp  cache.hpp  main.cpp  manager.cpp  manager.hpp
proto/: dfs.proto
scripts/: run_tests.sh
tests/: README.md
tests/e2e/: full_system_test.cpp  performance_test.cpp
tests/integration/: metaserver_test.cpp
tests/unit/: cache_test.cpp  storage_test.cpp  unit_test_utils.hpp
tests/utils/: test_utils.cpp  test_utils.hpp
